--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Minku Singh <mailminkusingh@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bootswatch": "^5.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "request": "^2.88.2",
